refactor: fixed and refactored the packets extraction, i apparently don't know how switch cases work